Misc/be3
../../../../../../kernel/google/msm/arch/arm/mm/rodata.c: In function 'set_page_attributes':
../../../../../../kernel/google/msm/arch/arm/mm/rodata.c:91:4: warning: format '%lx' expects argument of type 'long unsigned int', but argument 4 has type 'pmd_t' [-Wformat=]
error, forbidden warning: rodata.c:91
  CC      arch/arm/kernel/smp.o
make[2]: *** [/mnt/Drive-1/Development/Other/Android_ROMs/Build/LineageOS-14.1/kernel/google/msm/scripts/Makefile.build:307: arch/arm/mm/rodata.o] Error 1

marlin
../../../../../../kernel/google/marlin/mm/mmap.c:95:29: error: expected '=', ',', ';', 'asm' or '__attribute__' before '__ro_after_init'
 pgprot_t protection_map[16] __ro_after_init = {
                             ^
make[2]: *** [/mnt/Drive-1/Development/Other/Android_ROMs/Build/LineageOS-14.1/kernel/google/marlin/scripts/Makefile.build:257: mm/mmap.o] Error 1
make[1]: *** [/mnt/Drive-1/Development/Other/Android_ROMs/Build/LineageOS-14.1/kernel/google/marlin/Makefile:951: mm] Error 2

